# product

./: .env.example  .gitignore  API_CONTRACTS.md  BACKEND_AI.md  FRONTEND_AI.md  Makefile  README.md  TZ.md  design-qa.md
.claude/: CLAUDE.md  (+1 more)
backend/: .dockerignore  Dockerfile  PERFORMANCE_SLICE2.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/migrations/: README  env.py
backend/migrations/versions/: 0001_07_2026_initial_schema.py  0002_07_2026_auth_accounts_sessions.py  0003_07_2026_slice0_foundation.py  0004_07_2026_catalog_foundation.py  0005_07_2026_public_media.py  0006_07_2026_catalog_periods.py  0007_07_2026_catalog_search.py  0008_07_2026_submissions.py  0009_07_2026_submission_media.py  0010_07_2026_moderation.py  0011_07_2026_audit.py  0012_07_2026_publication.py
backend/scripts/: __init__.py  bootstrap_admin.py  check_module_boundaries.py  create_migration.py  export_openapi.py  measure_slice2.sh  seed_catalog.py
backend/seeds/: chechnya_research.json  chechnya_research_demo.json
backend/seeds/categories_itog_batches/: 001-foundation.json  002-entities-001.json  003-entities-002.json  004-entities-003.json  005-entities-004.json  006-entities-005.json  007-entities-006.json  008-relations-001.json  009-commons-evidence-001.json
backend/seeds/research_batches/: 001-foundation.json  002-entities-001.json  003-entities-002.json  004-entities-003.json  005-entities-004.json  006-entities-005.json  007-entities-006.json  008-relations-001.json  009-commons-evidence-001.json
backend/src/: config.py  main.py  router.py
(+594 files in other folders)
