[project]
name = "product-hackathon-backend"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM", "RUF", "PL"]
ignore = ["PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
# Celery does not publish a py.typed marker; contain that gap inside queue adapters.
module = ["celery", "celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["src/modules"]

[tool.importlinter]
root_packages = ["common", "infrastructure", "middleware", "modules"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain must not depend on frameworks or infrastructure"
type = "forbidden"
source_modules = ["modules.health.domain", "modules.auth.domain"]
forbidden_modules = [
  "fastapi",
  "pydantic",
  "sqlalchemy",
  "celery",
  "redis",
  "infrastructure",
  "modules.health.repository",
  "modules.health.routes",
  "modules.auth.repository",
  "modules.auth.routes",
]
